# distance_vector_routing_simul

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  configure.sh  docker-compose.yml  helper.c  helper.h  router  router.c  router.h  run.sh
kafkaService/: CMakeLists.txt  common.c  consumer.c  kafkaProp.c  kafkaProp.h  producer.c
kafkaService/include/: producer.h
middleware/: index.js  package-lock.json  package.json
router/: CMakeLists.txt  helper.c  jsonBuilder.c  router.c
router/include/: helper.h  imports.h
